# eris-econ

./: .gitignore  README.md  optimized_sigma.npy  pyproject.toml
.github/workflows/: ci.yml
data/: fraser_nettle_exp2.csv  ruggeri_column_key.xlsx
hpc/: deploy_to_hpc.sh  run_validation.py  submit_validation.sh
hpc/results/: sigma.npy  validation_results.json
notebooks/: out_of_sample_validation.ipynb
src/eris_econ/: __init__.py  behavioral.py  calibration.py  calibration_v2.py  dimensions.py  empirical.py  equilibrium.py  games.py  games_v2.py  joint_calibration.py  manifold.py  metrics.py  pathfinding.py  prospect.py  structural_fuzz.py  targets.py  validation.py  welfare.py
tests/: conftest.py  test_behavioral.py  test_calibration.py  test_calibration_v2.py  test_dimensions.py  test_equilibrium.py  test_games.py  test_games_v2.py  test_joint_calibration.py  test_manifold.py  test_metrics.py  test_pathfinding.py  test_prospect.py  test_structural_fuzz.py  test_validation.py  test_welfare.py
