[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eris-econ"
version = "0.1.0"
description = "Geometric economics: multi-dimensional decision manifolds, A* pathfinding, and Bond Geodesic Equilibrium"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Andrew H. Bond"},
]
keywords = [
    "geometric-economics",
    "behavioral-economics",
    "decision-manifold",
    "game-theory",
    "a-star-pathfinding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
